--- a/project/views/layout.ejs
+++ b/project/views/layout.ejs
@@ -14,7 +14,7 @@
         </header>
         <nav class="main" id="n1" role="navigation">
             <span><a href="/">Inicio</a></span>
-            <span><a href="/quizes/question">Pregunatas</a></span>
+            <span><a href="/quizes">Pregunatas</a></span>
         </nav>
         
         <section class="main" id="s1">
