--- a/project/views/quizes/index.ejs
+++ b/project/views/quizes/index.ejs
@@ -9,6 +9,13 @@
             		<button>Editar</button>
             	</a>
             </td>
+            <td>
+                <form method="POST" action="quizes/<%= quizes[i].id %>?_method=delete">
+                    <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+                        Borrar
+                    </button>
+                </form>
+            </td>
         </tr>
     <% } %>
 </table>
