--- a/project/views/quizes/show.ejs
+++ b/project/views/quizes/show.ejs
@@ -4,3 +4,16 @@
     <input type="submit" value="Enviar">
 </form>
 <br>
+<p>
+   <a href="/quizes/<%= quiz.id %>/comments/new">
+       <button>Nuevo Comentario</button>
+   </a>
+</p>
+
+<p>
+    <strong>Comentarios:</strong>
+</p>
+<% for(var index in quiz.Comments) { %>
+    <p>- <%= quiz.Comments[index].texto %></p>
+<% } %>
+<br>
