--- a/project/views/quizes/index.ejs
+++ b/project/views/quizes/index.ejs
@@ -4,6 +4,7 @@
             <td>
                 <a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>
             </td>
+            <% if(session.user) { %>
             <td>
             	<a href="quizes/<%= quizes[i].id %>/edit">
             		<button>Editar</button>
@@ -16,7 +17,10 @@
                     </button>
                 </form>
             </td>
+            <% } %>
         </tr>
     <% } %>
 </table>
+<% if(session.user) {%>
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<% } %>
