[modify] fix list comments

--- a/project/views/quizes/show.ejs
+++ b/project/views/quizes/show.ejs
@@ -13,7 +13,7 @@
 <p>
     <strong>Comentarios:</strong>
 </p>
-<% for(var index in quiz.Comments) { %>
-    <p>- <%= quiz.Comments[index].texto %></p>
+<% for(var index in quiz.comments) { %>
+    <p>- <%= quiz.comments[index].texto %></p>
 <% } %>
 <br>
